--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,8 +11,13 @@ env:
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
-    
+    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node_version: ['8', '10', '12']
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node_version }}
@@ -20,8 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node_version }}
 
-    - name: npm install, build and test
+    - name: yarn install, build and test
       run: |
-        npm install
-        npm run build --if-present
-        npm test
+        yarn
+        yarn test
